fix z-index layering

--- a/src/App.scss
+++ b/src/App.scss
@@ -84,7 +84,7 @@ footer {
 
 .sticky-outer-wrapper {
   position: relative;
-  z-index: 2;
+  z-index: 9;
 }
 
 .Pyro {
