--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -6,7 +6,7 @@
   height: 4rem;
   background: #2a2c3a;
   border-bottom: 2px solid rgba(255, 255, 255, 0.4);
-  z-index: 1;
+  z-index: 8;
 
   &.invis {
     background: none;
